# RootXIDF

./: CMakeLists.txt  sdkconfig.defaults
.github/workflows/: main.yml
main/: CMakeLists.txt  RootX.c  display_system.c  input_system.c  main.c
main/OLED/: i2c.c  ssd1306_i2c.c
main/include/: font_adafruit.h  globals.h  input_system.c  photo_data.h  ssd1306.h  tvbgone_engine.h
main/managers/: WORLDcodes.c  battery_system.c  boot_system.c  display_system.c  input_system.c  ir_system.c  sd_system.c  tvbgone_engine.c  wifi_system.c
